<resources>
    <string name="app_name">basicUIControls</string>
    <string name="radioGroupHeader">Select your favorite food or treat</string>
    <string name="radioGroupButton">Press me!</string>
    <string name="radioGroupItem1">Pizza</string>
    <string name="radioGroupItem2">Spaghetti</string>
    <string name="radioGroupItem3">Moms Spaghetti</string>
    <string name="radioGroupItem4">Sandwich</string>
    <string name="radioGroupItem5">Marshmallow</string>

    <string name="loginGroupHeader">Please sign in</string>
    <string name="loginGroupButton">Sign in</string>
    <string name="loginGroupUsernameHeader">Username</string>
    <string name="loginGroupPasswordHeader">Password</string>
</resources>
